@@ -9,6 +9,7 @@ Copyright (C) 2005 Erik Dick          <erdick a.t users d.o.t sourceforge d.o.t 
 Copyright (C) 2005 Mark Doliner       <thekingant a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Joakim Erdfelt     <joakim a.t erdfelt d.o.t net>
 Copyright (C) 2008 Julian Gamble      <juliangamble a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2006 Dan Godfrey        <dgodfrey99 a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2008 Tri Bao Ho         <hotribao a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2006 Naoki Iwami        <naoki_iwami a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2003 jcoverage ltd.
